src/test/deca/context/valid/null_sous_type_class.deca
/*
    Description : Affectation de this à une variable de la superclasse

    Résultat: OK
*/
class B{
    Object p = null;
}

