src/test/deca/context/invalid/call_equals_method_from_object.deca
/*
    Description : Appel de la méthode equals de la superclasse Object

    Résultat : OK
*/
class A{
    boolean b = equals(this);
}
